lib/src/go/snapshots/usage__go__tests__a_whole_cli.snap
---
source: lib/src/go/mod.rs
expression: out
---
// Code generated by `usage generate go`. DO NOT EDIT.
//
// Binding tables for `ex`, read by
// [github.com/jdx/usage/go/argv]. Regenerate rather than editing: the spec is
// the definition, and a hand-edit here is a difference no reviewer can see.
//
// These are package-level variables holding plain data, so the linker lays them
// out and nothing runs before main.

package ex

import "github.com/jdx/usage/go/argv"

// Version is what the spec declares, so a caller answering `--version` has it
// without the parse tables carrying a string binding never reads.
const Version = "1.2.3"

// LongVersion is the extended text printed for `--version`; `-V` uses Version.
const LongVersion = "1.2.3\ncommit abc123"

// Keys identify a table entry without a string comparison: switch on the Key an
// event carries rather than on its Name, which is there for diagnostics.
const (
	CmdRoot              uint64 = 1
	FlagVerbose          uint64 = 2
	FlagColor            uint64 = 3
	FlagJobs             uint64 = 4
	FlagInclude          uint64 = 5
	ArgFile              uint64 = 6
	ArgRest              uint64 = 7
	CmdInstall           uint64 = 8
	FlagInstallForce     uint64 = 9
	ArgInstallPkg        uint64 = 10
	CmdConfig            uint64 = 11
	CmdConfigLs          uint64 = 12
	FlagConfigLsNoHeader uint64 = 13
)

// Root is the command tree for `ex`. Pass it to argv.New.
var Root = &argv.Command{
	Name: "ex",
	Key:  CmdRoot,
	Flags: []*argv.Flag{
		{Key: FlagVerbose, Name: "verbose", Longs: []string{"verbose"}, Shorts: []byte{'v'}, Global: true},
		{Key: FlagColor, Name: "color", Longs: []string{"color"}, Negate: "no-color"},
		{Key: FlagJobs, Name: "jobs", Longs: []string{"jobs"}, Shorts: []byte{'j'}, TakesValue: true},
		{Key: FlagInclude, Name: "include", Longs: []string{"include"}, TakesValue: true, Variadic: true},
	},
	Args: []*argv.Arg{
		{Key: ArgFile, Name: "file", Required: true},
		{Key: ArgRest, Name: "rest", Var: true},
	},
	Subcommands: []*argv.Command{cmdInstall, cmdConfig},
	Version:     true,
}

// install
var cmdInstall = &argv.Command{
	Name:    "install",
	Key:     CmdInstall,
	Aliases: []string{"i"},
	Flags: []*argv.Flag{
		{Key: FlagInstallForce, Name: "force", Longs: []string{"force"}, Shorts: []byte{'f'}},
	},
	Args: []*argv.Arg{
		{Key: ArgInstallPkg, Name: "pkg", Required: true},
	},
}

// config
var cmdConfig = &argv.Command{
	Name:        "config",
	Key:         CmdConfig,
	Subcommands: []*argv.Command{cmdConfigLs},
}

// config ls
var cmdConfigLs = &argv.Command{
	Name: "ls",
	Key:  CmdConfigLs,
	Flags: []*argv.Flag{
		{Key: FlagConfigLsNoHeader, Name: "no-header", Longs: []string{"no-header"}},
	},
}

// Meta is the cold table, read only by the rules that are decided once the
// last token has been read: required, choices, the env-then-default fallback,
// the var bounds, and the four that compare one entry against another. A parse
// never touches it.
//
// Indexed by key, so entry Key sits at Meta[Key-1]. A command's slot is empty:
// commands take keys too, and have no cold half.
var Meta = argv.Metadata{
	{},
	{Key: FlagVerbose, Name: "verbose", Flag: true, RequiresIfBoolean: true, Spelling: "--verbose"},
	{Key: FlagColor, Name: "color", Flag: true, RequiresIfBoolean: true, Spelling: "--color"},
	{Key: FlagJobs, Name: "jobs", Flag: true, Spelling: "--jobs", ValueName: "n"},
	{Key: FlagInclude, Name: "include", Flag: true, Spelling: "--include", ValueName: "pattern", VarMax: 3},
	{Key: ArgFile, Name: "file", Required: true},
	{Key: ArgRest, Name: "rest"},
	{},
	{Key: FlagInstallForce, Name: "force", Flag: true, RequiresIfBoolean: true, Spelling: "--force"},
	{Key: ArgInstallPkg, Name: "pkg", Required: true},
	{},
	{},
	{Key: FlagConfigLsNoHeader, Name: "no-header", Flag: true, RequiresIfBoolean: true, Spelling: "--no-header"},
}

// HelpText is the third table, read only when a page is rendered. Neither the
// parser nor the post-binding rules touch it, and a CLI that never prints help
// does not carry it: Go's linker drops an unreferenced table whole.
//
// Indexed by key, like the others.
var HelpText = argv.HelpTable{
	{Key: CmdRoot},
	{Key: FlagVerbose, Short: "be loud", Long: "be loud"},
	{Key: FlagColor},
	{Key: FlagJobs, ValueName: "n", ValueDemanded: true},
	{Key: FlagInclude, ValueName: "pattern", ValueDemanded: true},
	{Key: ArgFile, Demanded: true},
	{Key: ArgRest},
	{Key: CmdInstall, VisibleAliases: []string{"i"}},
	{Key: FlagInstallForce},
	{Key: ArgInstallPkg, Demanded: true},
	{Key: CmdConfig},
	{Key: CmdConfigLs},
	{Key: FlagConfigLsNoHeader},
}

// HelpMeta is what a page needs from the spec's root rather than from any one
// command: root presentation metadata and CLI-wide layout.
var HelpMeta = argv.HelpSpec{Name: "ex", Bin: "ex", Version: "1.2.3", LongVersion: "1.2.3\ncommit abc123"}

// Cli is the whole command line.
type Cli struct {
	Verbose bool        // FlagVerbose
	Color   bool        // FlagColor
	Jobs    string      // FlagJobs
	Include []string    // FlagInclude
	File    string      // ArgFile
	Rest    []string    // ArgRest
	Install *InstallCmd // CmdInstall
	Config  *ConfigCmd  // CmdConfig
}

// InstallCmd is `install`.
type InstallCmd struct {
	Force bool   // FlagInstallForce
	Pkg   string // ArgInstallPkg
}

// ConfigCmd is `config`.
type ConfigCmd struct {
	Ls *ConfigLsCmd // CmdConfigLs
}

// ConfigLsCmd is `config ls`.
type ConfigLsCmd struct {
	NoHeader bool // FlagConfigLsNoHeader
}

// Parse binds a command line and fills the structs above.
//
// The rules decided once the last token has been read run here too, so a
// missing required flag or a value outside its choices comes back rather than
// reaching your code. A returned error is an *argv.Error; render it with
// argv.Render.
//
// Help and version arrive as errors, because a parse that stops to print a page
// has produced no value. Check the code before treating one as a failure.
func Parse(args []string) (*Cli, error) {
	out := &Cli{}
	var cmdInstallV *InstallCmd
	var cmdConfigV *ConfigCmd
	var cmdConfigLsV *ConfigLsCmd

	// Collected by key, so the post-binding rules can judge what arrived
	// before any of it is handed back.
	given := map[uint64][]string{}
	seen := map[uint64]int{}
	chain := []*argv.Command{Root}

	p := argv.New(Root, args)
	for p.Next() {
		ev := p.Event()
		switch ev.Kind {
		case argv.KindCommand:
			chain = append(chain, ev.Command)
			switch ev.Command.Key {
			case CmdInstall:
				cmdInstallV = &InstallCmd{}
				out.Install = cmdInstallV
			case CmdConfig:
				cmdConfigV = &ConfigCmd{}
				out.Config = cmdConfigV
			case CmdConfigLs:
				cmdConfigLsV = &ConfigLsCmd{}
				cmdConfigV.Ls = cmdConfigLsV
			}
		case argv.KindFlag:
			// The event parser leaves synthetic help/version requests to its caller.
			switch ev.Flag {
			case argv.HelpShort, argv.HelpLong:
				return nil, &argv.Error{Code: argv.CodeHelp, Cmd: p.Command(), Long: ev.Flag == argv.HelpLong}
			case argv.VersionShort, argv.VersionLong:
				return nil, &argv.Error{Code: argv.CodeVersion, Cmd: p.Command(), Long: ev.Flag == argv.VersionLong}
			}
			seen[ev.Flag.Key]++
			if ev.Flag.BoolValue {
				// Boolean binding is last-one-wins. Replace an earlier attached value even
				// when the last occurrence is bare, so relationship polarity follows the field.
				if ev.HasValue {
					given[ev.Flag.Key] = []string{ev.Value}
				} else {
					given[ev.Flag.Key] = []string{}
				}
			} else if ev.HasValue {
				given[ev.Flag.Key] = append(given[ev.Flag.Key], argv.SplitValue(ev.Value, ev.Flag.Delimiter, true)...)
			} else if given[ev.Flag.Key] == nil {
				// Given without a value is still given, and nil would read as
				// absent when the fallbacks are applied.
				given[ev.Flag.Key] = []string{}
			}
			switch ev.Flag.Key {
			case FlagVerbose:
				out.Verbose = !ev.Negated
			case FlagColor:
				out.Color = !ev.Negated
			case FlagJobs:
				out.Jobs = ev.Value
			case FlagInclude:
				if ev.HasValue {
					out.Include = append(out.Include, argv.SplitValue(ev.Value, ev.Flag.Delimiter, true)...)
				}
			case FlagInstallForce:
				cmdInstallV.Force = !ev.Negated
			case FlagConfigLsNoHeader:
				cmdConfigLsV.NoHeader = !ev.Negated
			}
		case argv.KindArg:
			seen[ev.Arg.Key]++
			values := argv.SplitValue(ev.Value, ev.Arg.Delimiter, ev.Delimit)
			given[ev.Arg.Key] = append(given[ev.Arg.Key], values...)
			switch ev.Arg.Key {
			case ArgFile:
				out.File = ev.Value
			case ArgRest:
				out.Rest = append(out.Rest, values...)
			case ArgInstallPkg:
				cmdInstallV.Pkg = ev.Value
			}
		}
	}
	if err := p.Err(); err != nil {
		return nil, err
	}
	if p.Command().ArgRequiredElseHelp && p.CommandStart() == len(args) {
		return nil, &argv.Error{Code: argv.CodeHelp, Cmd: p.Command()}
	}

	// Only the commands the words actually selected are judged: a required
	// flag on a command nobody ran is not missing.
	var scope []uint64
	requirements := map[uint64]bool{}
	for i, cmd := range chain {
		checkRequirements := i == len(chain)-1 || !cmd.SubcommandNegatesReqs
		for _, f := range cmd.Flags {
			scope = append(scope, f.Key)
			requirements[f.Key] = checkRequirements
		}
		for _, a := range cmd.Args {
			scope = append(scope, a.Key)
			requirements[a.Key] = checkRequirements
		}
	}
	sources := map[uint64]argv.Source{}
	filled := map[uint64][]string{}
	for _, key := range scope {
		values, source := argv.Fill(Meta.Lookup(key), given[key], argv.LookupEnv)
		filled[key] = values
		sources[key] = source
	}
	argv.ApplyDefaultIf(Meta, scope, filled, sources, nil)
	for _, key := range scope {
		values, source := filled[key], sources[key]
		entryMeta := Meta.Lookup(key)
		if entryMeta != nil && !requirements[key] {
			copy := *entryMeta
			copy.Required = false
			entryMeta = &copy
		}
		if err := argv.Check(entryMeta, values, seen[key]); err != nil {
			return nil, err
		}
		// What the environment or a default supplied has to reach the field
		// too. A front door that enforces a default and then hands back the
		// zero value is worse than one that has no defaults at all.
		//
		// Written here rather than in a function of its own because a
		// subcommand's struct is reachable only from inside this one: the
		// variable holding it is local, and only the keys of commands the
		// words selected are in scope, so it is never nil when its key is.
		if source == argv.FromEnv || source == argv.FromDefault {
			switch key {
			case FlagVerbose:
				if source == argv.FromEnv {
					out.Verbose = argv.EnvTruth(values[0])
				} else {
					out.Verbose = values[0] == "true"
				}
			case FlagColor:
				if source == argv.FromEnv {
					out.Color = argv.EnvTruth(values[0])
				} else {
					out.Color = values[0] == "true"
				}
			case FlagJobs:
				out.Jobs = values[len(values)-1]
			case FlagInclude:
				out.Include = append(out.Include, values...)
			case ArgFile:
				out.File = values[len(values)-1]
			case ArgRest:
				out.Rest = append(out.Rest, values...)
			case FlagInstallForce:
				if source == argv.FromEnv {
					cmdInstallV.Force = argv.EnvTruth(values[0])
				} else {
					cmdInstallV.Force = values[0] == "true"
				}
			case ArgInstallPkg:
				cmdInstallV.Pkg = values[len(values)-1]
			case FlagConfigLsNoHeader:
				if source == argv.FromEnv {
					cmdConfigLsV.NoHeader = argv.EnvTruth(values[0])
				} else {
					cmdConfigLsV.NoHeader = values[0] == "true"
				}
			}
		}
	}
	if err := argv.CheckRelationshipsWithValuesAndRequirements(Meta, scope, func(k uint64) argv.Source {
		return sources[k]
	}, nil, func(k uint64) bool { return requirements[k] }); err != nil {
		return nil, err
	}
	return out, nil
}
